--- a/sast_buildspec.yaml
+++ b/sast_buildspec.yaml
@@ -4,30 +4,7 @@ phases:
   build:
     commands:
       - |
-        echo Build started on `date`
-        dt=$(date +%F-%H%M%S)
-        codeReviewArn=$(aws codeguru-reviewer create-code-review --repository-association-arn $CODEGURU_ASSOCIATION --type '{"RepositoryAnalysis":{"SourceCodeType":{"S3BucketRepository":{"Name":'\"${CODEGURU_REPO_NAME}\"',"Details":{"BucketName":'\"${CODEGURU_BUCKET_NAME}\"',"CodeArtifacts":{"SourceCodeArtifactsObjectKey":"flask-app.zip"}}}}}}' --name flask-app-analysis-$dt | jq -r '.CodeReview.CodeReviewArn')
-        echo "Waiting for code review results: $codeReviewArn..."
-
-        codeReviewState='Pending'
-        while [ $codeReviewState == 'Pending' ];
-        do
-          sleep 5
-          codeReviewResult=$(aws codeguru-reviewer describe-code-review --code-review-arn=$codeReviewArn)
-          codeReviewState=$(echo $codeReviewResult | jq -r '.CodeReview.State')
-          echo "Scan in progress. Current status: $codeReviewState"
-        done
-
-        if [ $codeReviewState == 'Completed' ];
-        then
-          codeReviewFindings=$(echo $codeReviewResult | jq -r '.CodeReview.Metrics.FindingsCount')
-          echo "Code review $codeReviewArn completed successfully with $codeReviewFindings findings. You may now check CodeGuru Reviewer dashboard to see the detailed results"
-        elif [ $codeReviewState == 'Failed' ];
-        then
-          echo "Code review $codeReviewArn failed, you may check the reason in CodeGuru Reviewer dashboard"
-        else
-          echo "Code review $codeReviewArn returned an unhandled status, failing build"
-          exit 1;
-        fi
-
-        echo Build completed on `date`
+        export S3_KEY=$(ls /codebuild/input/PreviousBuildArtifact/)
+        export S3_ARN="arn:aws:s3:::appsecworkshopstack-pipelineartifactsbucketaea9a05-ndvwegsndzci/devsecops-pipeline/GitHubArti/${S3_KEY}"
+        echo $S3_ARN
+        
