Get Previous Artifact

--- a/sast_buildspec.yaml
+++ b/sast_buildspec.yaml
@@ -10,7 +10,7 @@ phases:
 
         echo Build started on `date`
         dt=$(date +%F-%H%M%S)
-        codeReviewArn=$(aws codeguru-reviewer create-code-review --repository-association-arn $CODEGURU_ASSOCIATION --type '{"RepositoryAnalysis":{"SourceCodeType":{"S3BucketRepository":{"Name":'\"${CODEGURU_REPO_NAME}\"',"Details":{"BucketName":'\"${BUCKET_NAME}\"',"CodeArtifacts":{"SourceCodeArtifactsObjectKey":"${OBJECT_KEY}"}}}}}}' --name flask-app-analysis-$dt | jq -r '.CodeReview.CodeReviewArn')
+        codeReviewArn=$(aws codeguru-reviewer create-code-review --repository-association-arn $CODEGURU_ASSOCIATION --type '{"RepositoryAnalysis":{"SourceCodeType":{"S3BucketRepository":{"Name":'\"${CODEGURU_REPO_NAME}\"',"Details":{"BucketName":'\"${BUCKET_NAME}\"',"CodeArtifacts":{"SourceCodeArtifactsObjectKey":'\"${OBJECT_KEY}\"'}}}}}}' --name flask-app-analysis-$dt | jq -r '.CodeReview.CodeReviewArn')
         echo "Waiting for code review results: $codeReviewArn..."
 
         codeReviewState='Pending'
